fix: spacing & size

--- a/src/globals.css
+++ b/src/globals.css
@@ -32,6 +32,70 @@
   --color-background: #231c20;
 
   --color-danger:rgb(207, 55, 35);
+
+  --spacing: calc(0.25 * 16px /* fixed rem size */);
+
+  --breakpoint-sm: calc(40 * 16px /* fixed rem size */);
+  --breakpoint-md: calc(48 * 16px /* fixed rem size */);
+  --breakpoint-lg: calc(64 * 16px /* fixed rem size */);
+  --breakpoint-xl: calc(80 * 16px /* fixed rem size */);
+  --breakpoint-2xl: calc(96 * 16px /* fixed rem size */);
+
+  --container-3xs: calc(16 * 16px /* fixed rem size */);
+  --container-2xs: calc(18 * 16px /* fixed rem size */);
+  --container-xs: calc(20 * 16px /* fixed rem size */);
+  --container-sm: calc(24 * 16px /* fixed rem size */);
+  --container-md: calc(28 * 16px /* fixed rem size */);
+  --container-lg: calc(32 * 16px /* fixed rem size */);
+  --container-xl: calc(36 * 16px /* fixed rem size */);
+  --container-2xl: calc(42 * 16px /* fixed rem size */);
+  --container-3xl: calc(48 * 16px /* fixed rem size */);
+  --container-4xl: calc(56 * 16px /* fixed rem size */);
+  --container-5xl: calc(64 * 16px /* fixed rem size */);
+  --container-6xl: calc(72 * 16px /* fixed rem size */);
+  --container-7xl: calc(80 * 16px /* fixed rem size */);
+
+  --text-xs: calc(0.75 * 16px /* fixed rem size */);
+  --text-xs--line-height: calc(1 / 0.75);
+  --text-sm: calc(0.875 * 16px /* fixed rem size */);
+  --text-sm--line-height: calc(1.25 / 0.875);
+  --text-base: calc(1 * 16px /* fixed rem size */);
+  --text-base--line-height: calc(1.5 / 1);
+  --text-lg: calc(1.125 * 16px /* fixed rem size */);
+  --text-lg--line-height: calc(1.75 / 1.125);
+  --text-xl: calc(1.25 * 16px /* fixed rem size */);
+  --text-xl--line-height: calc(1.75 / 1.25);
+  --text-2xl: calc(1.5 * 16px /* fixed rem size */);
+  --text-2xl--line-height: calc(2 / 1.5);
+  --text-3xl: calc(1.875 * 16px /* fixed rem size */);
+  --text-3xl--line-height: calc(2.25 / 1.875);
+  --text-4xl: calc(2.25 * 16px /* fixed rem size */);
+  --text-4xl--line-height: calc(2.5 / 2.25);
+  --text-5xl: calc(3 * 16px /* fixed rem size */);
+  --text-5xl--line-height: 1;
+  --text-6xl: calc(3.75 * 16px /* fixed rem size */);
+  --text-6xl--line-height: 1;
+  --text-7xl: calc(4.5 * 16px /* fixed rem size */);
+  --text-7xl--line-height: 1;
+  --text-8xl: calc(6 * 16px /* fixed rem size */);
+  --text-8xl--line-height: 1;
+  --text-9xl: calc(8 * 16px /* fixed rem size */);
+  --text-9xl--line-height: 1;
+
+  --leading-tight: 1.25;
+  --leading-snug: 1.375;
+  --leading-normal: 1.5;
+  --leading-relaxed: 1.625;
+  --leading-loose: 2;
+
+  --radius-xs: calc(0.125 * 16px /* fixed rem size */);
+  --radius-sm: calc(0.25 * 16px /* fixed rem size */);
+  --radius-md: calc(0.375 * 16px /* fixed rem size */);
+  --radius-lg: calc(0.5 * 16px /* fixed rem size */);
+  --radius-xl: calc(0.75 * 16px /* fixed rem size */);
+  --radius-2xl: calc(1 * 16px /* fixed rem size */);
+  --radius-3xl: calc(1.5 * 16px /* fixed rem size */);
+  --radius-4xl: calc(2 * 16px /* fixed rem size */);
 }
 
 @utility no-scrollbar {
@@ -71,6 +135,7 @@
 }
 
 body {
+  @apply text-base;
   font-family: 'Lora', serif;
 }
 
